# VD-thesis-2025

./: Bemutató.pptx  Szakdolgozat.docx  start.bash
Docker/: Dockerfile
install/: setup.bash  setup.ps1  setup.sh
install/ros2_shared/include/ros2_shared/: param_macros.hpp  string_printf.hpp
install/ros2_shared/share/ros2_shared/: local_setup.sh
install/ros2_shared/share/ros2_shared/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  ros2_sharedConfig-version.cmake  ros2_sharedConfig.cmake
install/tello_description/share/tello_description/: local_setup.bash  local_setup.zsh
install/tello_driver/lib/tello_driver/: tello_driver_main  tello_joy_main
install/tello_driver/share/tello_driver/: local_setup.bash  local_setup.sh  local_setup.zsh  package.xml
install/tello_gazebo/share/tello_gazebo/: local_setup.dsv  local_setup.sh
install/tello_hand_move/lib/tello_hand_move/: teleop_wasd_altitude
install/tello_msgs/share/tello_msgs/: local_setup.bash  local_setup.dsv  local_setup.zsh  package.xml
sim/install/: local_setup.sh
sim/log/: latest_build
src/tello_control/tello_control/: cam_view.py
src/tello_hand_move/: setup.py
tello_drone/install/: setup.zsh
tello_drone/log/: latest_build
tello_drone/sim/install/: setup.sh
tello_drone/sim/worlds/: cube_cam.world
tello_drone/src/tello_hand_move/: colcon.pkg  package.xml  setup.cfg
tello_drone/src/tello_hand_move/log/: latest_list
tello_drone/src/tello_hand_move/tello_hand_move/: teleop_move.py  teleop_wasd_altitude.py
(+165 files in other folders)
