<package format="3">
  <name>tello_hand_move</name>
  <version>0.0.1</version>
  <description>Optional manual teleop for Gazebo</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>